Nuclio-Crayfish/Minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuclio-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /trigger
            pathType: Prefix
            backend:
              service:
                name: nuclio-entry-point # name of function service when it got deployed
                port:
                  number: 8080 # Port number
